fix align-items aboutApp Page

--- a/src/pages/AboutApp/style.module.css
+++ b/src/pages/AboutApp/style.module.css
@@ -1,6 +1,6 @@
  .container {
     display: flex;
-    align-items: center;
+    align-items: center !important;
     flex-direction: column;
     align-items: start;
     max-width: var(--cui-breakpoint-xl) !important;
